--- a/index.html
+++ b/index.html
@@ -1,12 +1,210 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Portfolio</title>
-</head>
-<body>
-  <p>Hello, World!</p>
-</body>
-</html>
+[
+  {
+    "key": 1,
+    "type": "Passive",
+    "name": "스킬01",
+    "exp": "설명",
+    "grade": 5,
+    "name_trans": "번역키",
+    "count": 0,
+    "level": 0,
+    "maxLevel": 20,
+    "randomPer": 200000,
+    "randomPerEx": "24.919%"
+  },
+  {
+    "key": 2,
+    "type": "Active",
+    "name": "스킬02",
+    "exp": "설명",
+    "grade": 5,
+    "name_trans": "번역키",
+    "count": 0,
+    "level": 0,
+    "maxLevel": 20,
+    "randomPer": 200000,
+    "randomPerEx": "24.919%"
+  },
+  {
+    "key": 3,
+    "type": "Passive",
+    "name": "스킬03",
+    "exp": "설명",
+    "grade": 5,
+    "name_trans": "번역키",
+    "count": 0,
+    "level": 0,
+    "maxLevel": 20,
+    "randomPer": 200000,
+    "randomPerEx": "24.919%"
+  },
+  {
+    "key": 4,
+    "type": "Active",
+    "name": "스킬04",
+    "exp": "설명",
+    "grade": 5,
+    "name_trans": "번역키",
+    "count": 0,
+    "level": 0,
+    "maxLevel": 20,
+    "randomPer": 200000,
+    "randomPerEx": "24.919%"
+  },
+  {
+    "key": 5,
+    "type": "Passive",
+    "name": "스킬05",
+    "exp": "설명",
+    "grade": 5,
+    "name_trans": "번역키",
+    "count": 0,
+    "level": 0,
+    "maxLevel": 20,
+    "randomPer": 400,
+    "randomPerEx": "0.050%"
+  },
+  {
+    "key": 6,
+    "type": "Active",
+    "name": "스킬06",
+    "exp": "설명",
+    "grade": 5,
+    "name_trans": "번역키",
+    "count": 0,
+    "level": 0,
+    "maxLevel": 20,
+    "randomPer": 400,
+    "randomPerEx": "0.050%"
+  },
+  {
+    "key": 7,
+    "type": "Passive",
+    "name": "스킬07",
+    "exp": "설명",
+    "grade": 6,
+    "name_trans": "번역키",
+    "count": 0,
+    "level": 0,
+    "maxLevel": 20,
+    "randomPer": 350,
+    "randomPerEx": "0.044%"
+  },
+  {
+    "key": 8,
+    "type": "Active",
+    "name": "스킬08",
+    "exp": "설명",
+    "grade": 6,
+    "name_trans": "번역키",
+    "count": 0,
+    "level": 0,
+    "maxLevel": 20,
+    "randomPer": 350,
+    "randomPerEx": "0.044%"
+  },
+  {
+    "key": 9,
+    "type": "Passive",
+    "name": "스킬09",
+    "exp": "설명",
+    "grade": 6,
+    "name_trans": "번역키",
+    "count": 0,
+    "level": 0,
+    "maxLevel": 20,
+    "randomPer": 300,
+    "randomPerEx": "0.037%"
+  },
+  {
+    "key": 10,
+    "type": "Active",
+    "name": "스킬10",
+    "exp": "설명",
+    "grade": 6,
+    "name_trans": "번역키",
+    "count": 0,
+    "level": 0,
+    "maxLevel": 10,
+    "randomPer": 300,
+    "randomPerEx": "0.037%"
+  },
+  {
+    "key": 11,
+    "type": "Passive",
+    "name": "스킬11",
+    "exp": "설명",
+    "grade": 6,
+    "name_trans": "번역키",
+    "count": 0,
+    "level": 0,
+    "maxLevel": 10,
+    "randomPer": 250,
+    "randomPerEx": "0.031%"
+  },
+  {
+    "key": 12,
+    "type": "Active",
+    "name": "스킬12",
+    "exp": "설명",
+    "grade": 6,
+    "name_trans": "번역키",
+    "count": 0,
+    "level": 0,
+    "maxLevel": 10,
+    "randomPer": 250,
+    "randomPerEx": "0.031%"
+  },
+  {
+    "key": 13,
+    "type": "Passive",
+    "name": "스킬13",
+    "exp": "설명",
+    "grade": 7,
+    "name_trans": "번역키",
+    "count": 0,
+    "level": 0,
+    "maxLevel": 10,
+    "randomPer": 3,
+    "randomPerEx": "0.000%"
+  },
+  {
+    "key": 14,
+    "type": "Active",
+    "name": "스킬14",
+    "exp": "설명",
+    "grade": 7,
+    "name_trans": "번역키",
+    "count": 0,
+    "level": 0,
+    "maxLevel": 10,
+    "randomPer": 2,
+    "randomPerEx": "0.000%"
+  },
+  {
+    "key": 15,
+    "type": "Passive",
+    "name": "스킬15",
+    "exp": "설명",
+    "grade": 7,
+    "name_trans": "번역키",
+    "count": 0,
+    "level": 0,
+    "maxLevel": 10,
+    "randomPer": 1,
+    "randomPerEx": "0.000%"
+  },
+  {
+    "key": 16,
+    "type": "Active",
+    "name": "스킬16",
+    "exp": "설명",
+    "grade": 7,
+    "name_trans": "번역키",
+    "count": 0,
+    "level": 0,
+    "maxLevel": 10,
+    "randomPer": 1,
+    "randomPerEx": "0.000%"
+  }
+]
